# Pintor

./: meson.build  org.gnome.Jj.json
data/: com.github.djmbdv.pintor.appdata.xml.in  com.github.djmbdv.pintor.desktop.in  com.github.djmbdv.pintor.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: App.vala  Lienzo.vala  PanelTools.vala  Tool.vala  Window.vala  meson.build
